test/config/peer-authentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: knative-eventing-mtls
spec:
  mtls:
    mode: STRICT
